# quinn

./: .gitignore
backend/: pyproject.toml
backend/Docker/: Dockerfile  compose.yaml
backend/src/: __init__.py  config.py  constants.py  decorators.py  extensions.py  utils.py
backend/src/database/: base.py  models.py  utils.py
backend/src/routes/: auth.py  events.py  groups.py  locations.py  tags.py  users.py
backend/src/schemas/: auth_schema.py  event_schema.py  group_schema.py  location_schema.py  tag_schema.py  user_schema.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: apiClient.js  event.js  location.js  tag.js  user.js
frontend/src/assets/: main.css
frontend/src/components/: CardSkeleton.vue  DragDrop.vue  ErrorMessage.vue  Header.vue  HeroSearch.vue  LocationForm.vue  NoResults.vue  TagsSelect.vue
frontend/src/components/event/: EventCard.vue  EventFilters.vue
frontend/src/router/: routes.js
frontend/src/stores/: event.js  location.js  user.js
frontend/src/views/: Home.vue
frontend/src/views/auth/: Login.vue  Logout.vue  Register.vue
frontend/src/views/event/: CreateEvent.vue  EventDetails.vue  Events.vue
frontend/src/views/user/: Profile.vue  ProfileSettings.vue
